--- a/day5_weaterfall/src/main/res/layout/activity_weekone.xml
+++ b/day5_weaterfall/src/main/res/layout/activity_weekone.xml
@@ -6,13 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".WeekoneActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <jx.com.day5_weaterfall.view.HeadView
+        android:id="@+id/headview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></jx.com.day5_weaterfall.view.HeadView>
 
+    <RelativeLayout
+        android:id="@+id/relative"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/headview"
+        >
+        <jx.com.day5_weaterfall.view.HeadlineView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:textSize="25sp"
+            android:text="搜索历史"
+            />
+        <ImageView
+            android:id="@+id/laji"
+            android:layout_width="70dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/laji"
+            />
+    </RelativeLayout>
+    <jx.com.day5_weaterfall.view.LabelView
+        android:id="@+id/labelview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/relative"
+        android:layout_marginTop="10dp"
+        ></jx.com.day5_weaterfall.view.LabelView>
+    <jx.com.day5_weaterfall.view.HeadlineView
+        android:id="@+id/remenbiaoqian"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@+id/labelview"
+        android:text="热门搜索"
+        />
+    <jx.com.day5_weaterfall.view.LabelView
+        android:id="@+id/remen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/remenbiaoqian"
+        android:layout_marginTop="10dp"
+        ></jx.com.day5_weaterfall.view.LabelView>
 </android.support.constraint.ConstraintLayout>
